# easynet_server

./: .gitignore  generate_advanced_cert.sh  openwrt_build.sh
.github/workflows/: api_server.yml  mtls_server.yml  run_build.yml
api_server/: Cargo.toml
api_server/.cargo/: config.toml
api_server/dashboard/: README.md  pubspec.yaml
api_server/dashboard/ios/Runner.xcodeproj/: project.pbxproj
api_server/dashboard/lib/: main.dart  network_mgr.dart  web.dart
api_server/dashboard/lib/device/: device_detail.dart  device_http.dart  device_info.dart
api_server/dashboard/lib/network/: network_detail.dart  network_http.dart  network_info.dart  network_member.dart
api_server/dashboard/lib/network_editor/: basic_network_editor.dart  cert_network_editor.dart  dhcp_network_editor.dart  dns_network_editor.dart  network_editor.dart  route_network_editor.dart  server_network_editor.dart
api_server/dashboard/linux/runner/: my_application.cc
api_server/dashboard/macos/Runner.xcodeproj/: project.pbxproj
api_server/dashboard/web/: index.html
api_server/dashboard/windows/runner/: main.cpp
api_server/src/: main.rs
api_server/src/database/: database.rs  device.rs  mod.rs  network.rs
api_server/src/device/: device_config.rs  device_list.rs  device_online_status.rs  device_sysinfo.rs  mod.rs
api_server/src/member/: member_join.rs  member_leave.rs  member_list.rs  member_status_list.rs  mod.rs
api_server/src/network/: mod.rs  network_add.rs  network_config.rs  network_del.rs  network_list.rs  network_route_list.rs  network_update.rs
mtls_server/: CMakeLists.txt  client_mgr.c  client_mgr.h  main.c  message.h  ms_build.bat  stage.c  stage.h
mtls_server/certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  server-cert.pem  server-key.pem  server.csr  server.csr.cnf  server.ext.cnf
